objects/pw_cc__AlternativeCountryName__c.object
<CustomObject>
    <description>Provides a list of alternative names which when saved in to the country field get automatically corrected to the parent Country Name or Code</description>
    <fields>
        <fullName>pw_cc__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__OriginalCountry__c</fullName>
        <label>Original Country</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Alternative Country Names</relationshipLabel>
        <relationshipName>AlternativeCountryNames</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Alternative Country Name</label>
    <nameField>
        <label>Alternative Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternative Country Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>